--- a/components/e2e-tests-go-aiksdgki-workflow/overlays/development/deployment-patch.yaml
+++ b/components/e2e-tests-go-aiksdgki-workflow/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: e2e-tests-go-aiksdgki-workflow
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/e2e-tests-go-aiksdgki-workflow:03a3860ce30ac91c67b4c7a2b9596cd0c8b898f3@sha256:e8d7e9010829d4062224a674fe4fcd84052160adc6cb2b06550508b637c51107
+          name: container-image
